<resources>
    <string name="app_name">KnuCseApp</string>
    <string name="Notice">공지</string>
    <string name="Reservation">예약</string>
    <string name="Board">게시판</string>
    <string name="Mypage">마이페이지</string>

    <!-- SignIn , Signup view-->
    <string name="userid_suffix">"@knu.ac.kr"</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_password_notice">※ 가입된 이메일로 인증을 완료해주세요.</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="new_password">새 비밀번호</string>
    <string name="check_new_password">새 비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="password_check">비밀번호 재확인</string>
    <string name="name">이름</string>
    <string name="student_id">학번</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_explain">자유게시판에서 사용합니다.</string>
    <string name="gender">성별</string>
    <string name="gender_w">여</string>
    <string name="gender_m">남</string>
    <string name="major">학과</string>
    <string name="major_simcom">심컴</string>
    <string name="major_glesob">글솦</string>
    <string name="send_verify_number">인증번호\n전송</string>
    <string name="verify">인증확인</string>
    <string name="verify_hint">인증번호를 입력하세요</string>
    <string name="complete_signup">가입완료</string>
    <string name="auto_login">&#160;&#160;&#160;&#160;자동로그인</string>
    <string name="verify_notice">※ 인증번호 이메일이 확인되지 않는 경우 스팸 메일함을 확인해주세요.</string>

    <!-- user_info edit   -->
    <string-array name="user_info_edit_menu">
        <item>프로필 사진 변경</item>
        <item>프로필 사진 삭제</item>
    </string-array>
    <string name="edit">수정</string>


    <!-- password_edit   -->
    <string name="cur_password">현재 비밀번호</string>
    <string name="new_password_notice">영문,숫자,특문이 2종류이상 조합된 8~20자</string>

    <!-- board, detail board, search, writing view   -->
    <string name="date">Date</string>
    <string name="tag">Tag</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="comment">Comment</string>
    <string name="reply">답글달기</string>
    <string name="comment_delete">삭제</string>
    <string name="comment_edit">수정</string>
    <string name="tab_free">자유게시판</string>
    <string name="tab_student">학생회공지</string>
    <string name="tab_qua">QNA</string>
    <string name="cancel">취소</string>
    <string name="search_hint">검색어를 입력해주세요</string>
    <string name="search_blank">게시글을 검색해보세요</string>
    <string name="search_result">검색결과</string>
    <string name="writing">글 쓰기</string>
    <string name="complete">완료</string>
    <string name="writing_title">제목</string>
    <string name="writing_notice">본문을 입력하세요.</string>
    <string name="choose_category">카테고리를 설정해주세요</string>
    <string name="recommend_category">검색 범위</string>
    <string name="category_explain">검색 범위를 설정해주세요.</string>
    <string name="comment_hint">댓글을 입력하세요.</string>
    <string name="reply_hint">대댓글을 입력하세요.</string>

    <!-- notice view-->
    <string name="before_page">이전 페이지</string>
    <string name="next_page">다음 페이지</string>

    <!-- reservation, confirm view-->
    <string name="show_seat_layout">배치도 보기</string>
    <string name="reservation_confirm_toolbar">좌석예약정보</string>
    <string name="reservation_confirm_message">"예약 좌석 관리는 '마이페이지 > 예약 내역' 에서 가능합니다."</string>
    <string name="seat_info">좌석정보</string>
    <string name="seat_status">이용상태</string>
    <string name="enter_time">입실시간</string>
    <string name="exit_time">퇴실시간</string>
    <string name="cancel_reservation">예약 취소</string>
    <string name="complete_reservation">확인</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- mypage -->
    <string name="mypage_menu_account_management">계정 관리</string>
    <string name="mypage_menu_classroom">강의실</string>
    <string name="mypage_menu_board">게시판</string>
    <string name="mypage_menu_app_management">앱 관리</string>
    <string name="mypage_mypage">마이페이지</string>
    <string name="mypage_change_password">비밀번호 변경</string>
    <string name="mypage_delete_member">회원 탈퇴</string>
    <string name="mypage_reservation_history">예약내역</string>
    <string name="mypage_my_write">내가 쓴 글</string>
    <string name="mypage_my_comment">내가 쓴 댓/답글</string>
    <string name="mypage_setting">환경설정</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="reservation_history_toolbar">예약 내역</string>
    <string name="reservation_histroy_message">예약된 좌석 정보가 없습니다.</string>
    <string name="reservation_return">좌석 반납</string>
    <string name="reservation_extension">예약 연장</string>
    <string name="reservation_extension_num">연장 횟수</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="disconnected">네트워크에 연결되지 않았습니다.</string>
    <string name="disconnected2">연결 시도 후 잠시만 기다려 주세요.</string>
    <string name="refresh">새로고침</string>

</resources>