<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.knucseapp.ui.board.BoardViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connected_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.board.BoardHomeFragment">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toTopOf="@+id/viewPager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_free" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_qua" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_student" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/disconnected_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:gravity="center">
            <TextView
                android:id="@+id/tv_disconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="24sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_disconnected2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected2"
                android:textSize="24sp"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
</layout>