<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.knucseapp.ui.reservation.ReservationViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mypage.menu.ReservationHistoryActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/knu_red"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reservation_history_toolbar_textview"
                android:text="@string/reservation_history_toolbar"
                style="@style/toolbar_textstyle"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/connected_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <TextView
                android:id="@+id/reservation_histroy_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/reservation_confirm_edge"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/reservation_histroy_message"
                android:textColor="#FF0000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/reservation_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:visibility="invisible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/reservation_confirm_top_edge">

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reservation_history_seat_info"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/reservation_confirm_middle_edge">

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_status"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reservation_history_seat_status"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/reservation_confirm_middle_edge">

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/reservation_extension_num"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reservation_history_extension_num"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/reservation_confirm_middle_edge">>

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/enter_time"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reservation_history_enter_time"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/reservation_confirm_bottom_edge">>

                    <TextView
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/exit_time"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reservation_history_exit_time"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="23dp"
                        android:text="@string/seat_info"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>


            </TableLayout>

            <LinearLayout
                android:id="@+id/reservation_history_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reservation_return_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/reservation_cancel_button"
                    android:stateListAnimator="@null"
                    android:text="@string/reservation_return"
                    android:textColor="@color/button_text_color2" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reservation_extension_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/reservation_confirm_button"
                    android:stateListAnimator="@null"
                    android:text="@string/reservation_extension"
                    android:textColor="@color/button_text_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/disconnected_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:gravity="center">
            <TextView
                android:id="@+id/tv_disconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="24sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_disconnected2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected2"
                android:textSize="24sp"
                android:layout_gravity="center" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>