<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:clickable="true"
        tools:context=".ui.board.search.SearchBlankFragment"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend_category"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/blank_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/blank_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/blank_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_textView" />

        <TextView
            android:id="@+id/blank_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/search_blank"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blank_recycler" />

        <TextView
            android:id="@+id/category_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_explain"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank_textview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
